# Survey_VNPT_HIS

./: contracts.html  f1_dash.html  main.html
f1-dash/: Cargo.toml  LICENSE  README.md  SETUP.md  compose.yaml  docker-bake.hcl  dockerfile
f1-dash/.github/workflows/: release.yaml
f1-dash/.k8s/: deployment.yaml  namespace.yaml  services.yaml
f1-dash/api/: Cargo.toml
f1-dash/api/src/: main.rs
f1-dash/realtime/: Cargo.toml
f1-dash/realtime/src/: http_server.rs
f1-dash/realtime/src/http_server/: connections.rs  current.rs  drivers.rs  health.rs  realtime.rs
f1-dash/realtime/src/services/: state_service.rs
f1-dash/shared/: Cargo.toml
f1-dash/shared/src/: events.rs  lib.rs  log.rs  models.rs
f1-dash/signalr/: README.md
f1-dash/simulator/: Cargo.toml  readme.md
f1-dash/simulator/src/: commands.rs  main.rs  replay.rs
f1-dash/simulator/src/replay/: server.rs
worldcup2026_web/: app.js  data.js  index.html  style.css  update_data_js.ps1
