[package]
name = "realtime"
version = "0.4.0"
edition = "2024"
publish = false
authors = ["slowlydev"]

[dependencies]
shared = { workspace = true }
signalr = { workspace = true }

anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2"] }
futures = "0.3.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
async-stream = "0.3.6"
