[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
signalr.workspace = true

axum = { version = "0.8.4", features = ["ws"] }
anyhow = "1.0.98"
flume = "0.12.0"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
